OpenApi config fixes